force-app/main/default/objects/Servicing_Dashboard_Option__mdt/Servicing_Dashboard_Option__mdt.object-meta.xml
<CustomObject>
    <label>Servicing Dashboard Option</label>
    <pluralLabel>Servicing Dashboard Options</pluralLabel>
</CustomObject>