force-app/main/default/objects/Servicing_Dashboard_Option__mdt/fields/Behavior__c.field-meta.xml
<CustomField>
    <fullName>Behavior__c</fullName>
    <description>Select the &quot;Custom&quot; option to let the code handle what happens when a user clicks the option.</description>
    <inlineHelpText>Select the &quot;Custom&quot; option to let the code handle what happens when a user clicks the option.</inlineHelpText>
    <label>Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
                <default>true</default>
                <label>Custom</label>
            </value>
            <value>
                <fullName>Open Lightning Web Component</fullName>
            </value>
            <value>
                <fullName>Open Screen Flow</fullName>
            </value>
            <value>
                <fullName>Launch a URL in a New Tab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>