force-app/main/default/objects/Servicing_Dashboard_Option__mdt/fields/Case_Record_Type_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type_Dev_Name__c</fullName>
    <label>Case Record Type Dev Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>