force-app/main/default/objects/Servicing_Dashboard_Option__mdt/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <description>The status of the case on create.</description>
    <label>Case Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>