force-app/main/default/objects/Servicing_Dashboard_Option__mdt/fields/LWC_Name__c.field-meta.xml
<CustomField>
    <fullName>LWC_Name__c</fullName>
    <description>Important: use the HTML syntax. (e.g. &quot;c-my-custom-component&quot;)</description>
    <inlineHelpText>Important: use the HTML syntax. (e.g. &quot;c-my-custom-component&quot;)</inlineHelpText>
    <label>LWC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>