force-app/main/default/objects/Servicing_Dashboard_Option__mdt/fields/Navigate_to_Case_Mode__c.field-meta.xml
<CustomField>
    <fullName>Navigate_to_Case_Mode__c</fullName>
    <description>When redirecting to the case open the case in View or Edit mode?</description>
    <label>Navigate to Case Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>View</fullName>
                <default>true</default>
                <label>View</label>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>ToastOnly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>