force-app/main/default/objects/Servicing_Dashboard_Option__mdt/fields/Option_Description__c.field-meta.xml
<CustomField>
    <fullName>Option_Description__c</fullName>
    <description>Description / Help Text for what the option does.  Will appear on mouse over of the icon.</description>
    <label>Option Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>