force-app/main/default/objects/Servicing_Dashboard_Option__mdt/fields/Option_Icon__c.field-meta.xml
<CustomField>
    <fullName>Option_Icon__c</fullName>
    <label>Option Icon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>