force-app/main/default/objects/Servicing_Dashboard_Option__mdt/fields/Option_Title__c.field-meta.xml
<CustomField>
    <fullName>Option_Title__c</fullName>
    <label>Option Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>