force-app/main/default/objects/Servicing_Dashboard_Option__mdt/fields/Resume_Flows__c.field-meta.xml
<CustomField>
    <fullName>Resume_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the dashboard will maintain flow progress if a user exits the flow popup. Otherwise, it will start a new flow interview.</description>
    <inlineHelpText>If checked, the dashboard will maintain flow progress if a user exits the flow popup. Otherwise, it will start a new flow interview.</inlineHelpText>
    <label>Resume Flows</label>
    <type>Checkbox</type>
</CustomField>