force-app/main/default/objects/Servicing_Dashboard_Option__mdt/fields/Servicing_Dashboard_Section__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Dashboard_Section__c</fullName>
    <label>Servicing Dashboard Section</label>
    <referenceTo>Servicing_Dashboard_Section__mdt</referenceTo>
    <relationshipLabel>Servicing Dashboard Options</relationshipLabel>
    <relationshipName>Servicing_Dashboard_Options</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>