force-app/main/default/objects/Servicing_Dashboard_Option__mdt/fields/Show_On_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Show_On_Dashboard__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked this option will appear on the servicing dashboard, otherwise it&apos;s just used for case creation default values.</description>
    <label>Show On Dashboard</label>
    <type>Checkbox</type>
</CustomField>