force-app/main/default/objects/Servicing_Dashboard_Option__mdt/fields/Toast_Message__c.field-meta.xml
<CustomField>
    <fullName>Toast_Message__c</fullName>
    <description>The toast message on finish.</description>
    <label>Toast Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>