force-app/main/default/objects/Servicing_Dashboard_Option__mdt/fields/Toast_Title__c.field-meta.xml
<CustomField>
    <fullName>Toast_Title__c</fullName>
    <description>The toast title for the toast message on finish.</description>
    <label>Toast Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>