force-app/main/default/objects/Servicing_Dashboard_Option__mdt/fields/URL_Merge_Fields__c.field-meta.xml
<CustomField>
    <fullName>URL_Merge_Fields__c</fullName>
    <description>Enter JSON with the following syntax: { &quot;utmParameterName&quot; : &quot;My_Custom_Field__c&quot;, &quot;utmParameter2Name&quot; : &quot;My_Other_Custom_Field__c&quot;}</description>
    <inlineHelpText>Enter JSON with the following syntax: { &quot;utmParameterName&quot; : &quot;My_Custom_Field__c&quot;, &quot;utmParameter2Name&quot; : &quot;My_Other_Custom_Field__c&quot;}</inlineHelpText>
    <label>URL Merge Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>